# donnager

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  lib.rs  pyproject.toml  requirements.txt  threebody.rs
.github/ISSUE_TEMPLATE/: standard-issue-template.md
.github/workflows/: CD_pipeline.yml  CI_pipeline.yml  rust.yml
demos/: launch_cost.rs  n_body.rs  orbital_sim.rs
donnager/: daylight.py  donnager.pyi  interplan.py  porkchop_plotting.py
donnager_py/: Cargo.toml  donnager.pyi  lib.rs
python/: daylight.py  donnager.pyi  porkchop_plotting.py
python/donnager/: daylight.py  interplan.py  porkchop_plotting.py
src/: aero.rs  astro.rs  atom.rs  ballistics.rs  chem.rs  constants.rs  em.rs  lib.rs  main.rs  physics.rs  spacetime.rs
src/apps/: overhead_pass.rs
src/cosmos/: body.rs  coordinates.rs  electromag.rs  electromagnetism.rs  grav.rs  gravity.rs  mod.rs  objects.rs  orbit.rs  physics.rs  propogate.rs  relativity.rs  space.rs  spacetime.rs  time.rs
src/demos/: aldrin_cycle.rs  aldrin_cycler.rs  day_length.rs  launch_cost.rs  launch_sim.rs  n_body.rs  n_body_sim.rs  next_overhead_pass.rs  orbital_sim.rs  power_gen_sim.rs
src/donnager/: aero.rs  astro.rs  atom.rs  ballistics.rs  chem.rs  constants.rs  earth.rs  electromagnetism.rs  em.rs  math.rs  mod.rs  physics.rs  planets.csv  spacetime.rs  time.rs  xyzt.rs
src/donnager/cosmos/: electromagnetism.rs  mod.rs  spacetime.rs
src/donnager/dynamics/: stability.rs  vehicle.rs
src/donnager/gravity/: barneshut.rs  interplan.rs  kepler.rs  mod.rs  sgp4.rs
src/donnager/propulsion/: aero.rs  atom.rs  chem.rs
src/donnager_rs/: constants.rs  em.rs  spacetime.rs
src/donnager_rs/dynamics/: filters.rs  stability.rs  vehicle.rs
src/donnager_rs/gravity/: barneshut.rs  interplan.rs  kepler.rs  sgp4.rs
src/donnager_rs/propulsion/: aero.rs  atom.rs  chem.rs
src/dynamics/: filters.rs  mod.rs  stability.rs  vehicle.rs
src/gravity/: barneshut.rs  interplan.rs  kepler.rs  mod.rs  sgp4.rs
src/n_body_sim/: lib.rs  main.rs
src/propulsion/: aero.rs  atom.rs  ballistics.rs  chem.rs  engine.rs  mod.rs
src/sims/: launch_cost.rs  n_body.rs  orbital_sim.rs
