# Donnager manifest file

[package]
name = "donnager"
version = "0.1.2"
description = "Blazingly fast astrodynamics calculations in Rust"
license = "MIT"
keywords = ["astrodynamics", "astronomy", "satellites"]
repository = "https://github.com/Thomas-Oz-Dunn/donnager"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "donnager"

[[bin]]
name = "aldrin_cyclers"
path = "src/demos/aldrin_cycle.rs"

[[bin]]
name = "launch_cost"
path = "src/demos/launch_cost.rs"

[[bin]]
name = "n_body"
path = "src/demos/n_body.rs"

[[bin]]
name = "orbital_sim"
path = "src/demos/orbital_sim.rs"

[dependencies]
nalgebra = "0.31.4"
plotters = "0.3.4"
chrono = "0.4.23"
polars = "0.28.0"

