# Donnager manifest file

[package]
name = "donnager"
version = "0.1.3"
description = "Blazingly fast astrodynamics calculations in Rust"
license = "MIT"
keywords = ["astrodynamics", "astronomy", "satellites"]
repository = "https://github.com/Thomas-Oz-Dunn/donnager"

edition = "2021"

[lib]
name = "donnager"
crate-type = ["cdylib"]

[[bin]]
name = "launch_cost"
path = "demos/launch_cost.rs"

[[bin]]
name = "n_body"
path = "demos/n_body.rs"

[[bin]]
name = "orbital_sim"
path = "demos/orbital_sim.rs"

[dependencies]
nalgebra = "0.31.4"
plotters = "0.3.4"
chrono = "0.4.23"
# polars = "0.31.0"
rayon = "1.7.0"
parse-tle = "0.1.1"
clap = { version = "4.4.0", features = ["derive"] }
pyo3 = { version = "0.19.2", features = ["extension-module"] }
