
[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "donnager"
description = "Blazingly fast astrodynamics calculations in Python and Rust"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"

[tool.maturin]
python-source = "python"
module-name = "donnager.donnager"
